@@ -1,3 +1,9 @@
+Tue Mar  6 00:10:36 UTC 2007  Steve Huston  <shuston@riverace.com>
+
+        * examples/ASX/UPIPE_Event_Server/event_server.cpp: Use ACE_DEBUG
+          to display the message containing a time_t. Use of the standard
+          iostream operator<< with time_t gives the Intel90 compiler fits.
+
 Mon Mar  5 23:09:59 UTC 2007  Steve Huston  <shuston@riverace.com>
 
         * ace/Log_Msg.{h cpp}: Added new format specifiers:
